--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,9 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.8.1"
 activityCompose = "1.9.0"
-composeBom = "2023.08.00"
+composeBom = "2024.05.00"
+retrofit2 = "2.9.0"
+gson = "2.10.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,6 +26,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+squareup-retrofit2 = { group = "retrofit2", name = "retrofit2", version.ref = "retrofit2" }
+google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+squareup-retrofit2-converter = { group = "retrofit2", name = "retrofit2-converter", version.ref = "retrofit2" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
