--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.9.0"
 composeBom = "2024.05.00"
 retrofit2 = "2.9.0"
 gson = "2.10.1"
+playServicesLocation = "21.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +30,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 squareup-retrofit2 = { group = "retrofit2", name = "retrofit2", version.ref = "retrofit2" }
 google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 squareup-retrofit2-converter = { group = "retrofit2", name = "retrofit2-converter", version.ref = "retrofit2" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
